<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_100"
    tools:context=".views.storyupload.StoryUploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/preview_iv"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/preview_image"
            app:srcCompat="@drawable/ic_place_holder"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_gravity="center_horizontal"
            android:id="@+id/sw_is_using_location"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/sw_is_using_location_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/camera_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:elevation="2dp"
                android:scaleType="fitCenter"
                android:text="@string/camera"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/gallery_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/gallery"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/story_description_layout_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/story_description_et"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="@string/story_description_layout"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:padding="30dp"
                android:scrollbarStyle="insideInset"
                android:background="@android:color/white"
                android:textColor="@android:color/black"
                android:scrollbars="vertical"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/upload_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/upload" />
    </LinearLayout>

</ScrollView>